# src/app/api/v1/info/[code]/route.ts
@@ -5,6 +5,7 @@ import byteToData from "@/utils/byteToData"
 import { DateTime } from "luxon"
 import imageSize from "image-size"
 import type { FileInfo } from "@/types/fileserver"
+import crypto from "node:crypto"
 
 type Props = {
   params: Promise<{
@@ -30,6 +31,9 @@ export async function GET(request: NextRequest, { params }: Props) {
     .filter((file) => file !== "thumbnail.png")[0]
   const fileStat = fs.statSync(`${filesDir}/${code}/${fileDir}`)
 
+  const checksum = crypto.createHash("md5")
+  checksum.update(fs.readFileSync(`${filesDir}/${code}/${fileDir}`))
+
   const info: FileInfo = {
     code,
     url: `${process.env.URL}/files/${code}`,
@@ -43,6 +47,7 @@ export async function GET(request: NextRequest, { params }: Props) {
     unixDate: fileStat.mtime.getTime(),
     ago: DateTime.fromJSDate(fileStat.mtime).setLocale("en").toRelative(),
     downloadCount: counter[code] || 0,
+    checksum: checksum.digest("hex"),
   }
 
   if (IMG_EXT.includes(path.extname(fileDir))) {
