# src/app/api/v1/list/route.ts
@@ -4,6 +4,7 @@ import byteToData from "@/utils/byteToData"
 import { DateTime } from "luxon"
 import imageSize from "image-size"
 import type { FileInfo } from "@/types/fileserver"
+import crypto from "node:crypto"
 
 const IMG_EXT = [".png", ".jpg", ".jpeg", ".webp", ".gif", ".svg"]
 
@@ -21,6 +22,9 @@ export async function GET() {
     const fileStat = fs.statSync(`${filesDir}/${dir}/${file}`)
     const downloadCount = counter[dir] || 0
 
+    const checksum = crypto.createHash("md5")
+    checksum.update(fs.readFileSync(`${filesDir}/${dir}/${file}`))
+
     const info: FileInfo = {
       code: dir,
       url: `${process.env.URL}/files/${dir}`,
@@ -34,6 +38,7 @@ export async function GET() {
       unixDate: fileStat.mtime.getTime(),
       ago: DateTime.fromJSDate(fileStat.mtime).setLocale("en").toRelative(),
       downloadCount,
+      checksum: checksum.digest("hex"),
     }
 
     if (IMG_EXT.includes(path.extname(file))) {
