# src/app/api/v1/search/[param]/route.ts
@@ -5,6 +5,7 @@ import { DateTime } from "luxon"
 import type { NextRequest } from "next/server"
 import type { FileInfo, FileInfoWithSearch } from "@/types/fileserver"
 import imageSize from "image-size"
+import crypto from "node:crypto"
 
 type Props = {
   params: Promise<{
@@ -30,6 +31,9 @@ export async function GET(request: NextRequest, { params }: Props) {
     const fileStat = fs.statSync(`${filesDir}/${dir}/${file}`)
     const downloadCount = counter[dir] || 0
 
+    const checksum = crypto.createHash("md5")
+    checksum.update(fs.readFileSync(`${filesDir}/${dir}/${file}`))
+
     const info: FileInfo = {
       code: dir,
       url: `${process.env.URL}/files/${dir}`,
@@ -43,6 +47,7 @@ export async function GET(request: NextRequest, { params }: Props) {
       unixDate: fileStat.mtime.getTime(),
       ago: DateTime.fromJSDate(fileStat.mtime).setLocale("en").toRelative(),
       downloadCount,
+      checksum: checksum.digest("hex"),
     }
 
     if (IMG_EXT.includes(path.extname(file))) {
